recipes/metrics-server/metrics-server/3.13.0/README.md
# metrics-server/metrics-server 3.13.0 Proof

This is the promoted proof slice for the metrics-server public Helm chart.

Variants:

- `default`: chart defaults plus explicit kind-compatible kubelet TLS flag; 9 Helm objects, 10 cub installer objects including Namespace.
- `external-tls-ca`: target Secret plus explicit APIService CA bundle; 9 Helm objects, 10 cub installer objects including Namespace.

What this proves:

- regular Helm output is preserved by `cub installer setup`, plus the explained Namespace support object;
- default chart render is deterministic under the pinned Kubernetes capability profile;
- the existing-secret TLS path avoids Helm lookup and generated certificate material by making the target Secret explicit;
- APIService and cluster RBAC risks are visible as scan/gate findings with production-disposition receipts;
- production support remains a target-scoped decision, especially for resource policy and external-tls-ca certificate validation.

Useful commands:

```sh
npm run metrics-server:generate-proof
npm run metrics-server:generate-package
npm run metrics-server:verify-proof
npm run metrics-server:verify-package
npm run metrics-server:compare
```
